@@ -12,7 +12,7 @@
 /*  along with SCIP; see the file COPYING. If not email to scip@zib.de.      */
 /*                                                                           */
 /* * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * */
-#pragma ident "@(#) $Id: heur_rounding.c,v 1.55 2008/04/17 17:49:09 bzfpfets Exp $"
+#pragma ident "@(#) $Id: heur_rounding.c,v 1.56 2008/09/15 20:18:34 bzfwinkm Exp $"
 
 /**@file   heur_rounding.c
  * @brief  LP rounding heuristic that tries to recover from intermediate infeasibilities
@@ -161,6 +161,10 @@ SCIP_RETCODE updateActivities(
          /* update row activity */
          oldactivity = activities[rowpos];
          newactivity = oldactivity + delta * colvals[r];
+         if( SCIPisInfinity(scip, newactivity) )
+            newactivity = SCIPinfinity(scip);
+         else if( SCIPisInfinity(scip, -newactivity) )
+            newactivity = -SCIPinfinity(scip);
          activities[rowpos] = newactivity;
 
          /* update row violation arrays */
